<resources>
    <string name="app_name">TotalEmergency</string>
    <string name="user_string">user</string>
    <string name="password_string">password</string>
    <string name="tv_login">login</string>
    <string name="valid_user_msg">Credentials valid!</string>
    <string name="invalid_user_msg">Credentials no valid</string>
    <string name="tv_register">join</string>
    <string name="repeat_password">repeat password</string>
    <string name="visit_website">trakt.tv</string>
    <string name="greeting">Hello, %s!</string>
    <string name="map_option">Map menu</string>
    <string name="profile">Profile</string>
    <string name="contacts">Contactos</string>
    <string name="registers">Registros</string>
    <string name="emergency">Emergency</string>
    <!-- Centros sanitarios URL -->
    <string name="health_center_url">https://opendata.caceres.es/sparql/?default-graph-uri=&amp;query=SELECT+%3Furi+%3Fgeo_long++%3Fgeo_lat+%3Fcategoria+%3Frdfs_label+%3FtieneEnlaceSIG+%3Fschema_url++WHERE+%7B+%0D%0A%3Furi+a+cts%3Acentros.+%0D%0AOPTIONAL++%7B%3Furi+geo%3Along+%3Fgeo_long.+%7D%0D%0AOPTIONAL++%7B%3Furi+geo%3Alat+%3Fgeo_lat.+%7D%0D%0AOPTIONAL++%7B%3Furi+cts%3Acategoria+%3Fcategoria.+

    <!-- FRAGMENT PROFILE -->
    <string name="modify_account">Modificar cuenta</string>
    <string name="username_profile">Nombre de usuario:</string>
...
