<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.RecordRegistryFragment">

    <!-- TODO: Update blank fragment layout -->

...
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/nodata"
        app:layout_constraintStart_toStartOf="@+id/nodata"
        app:layout_constraintTop_toBottomOf="@+id/nodata" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/videoRegistry"
        android:layout_width="395dp"
        android:layout_height="809dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
